--- a/css/main.scss
+++ b/css/main.scss
@@ -18,11 +18,21 @@ body {
 	font-weight: 400;
 	text-align: center;
 	color: $theme--text;
+	transition: all .5s ease-in;
+
+	&.video--playing {
+
+		color: black;
+		background-color: black;
+
+		h1, a { color: black; }
+	}
 }
 
 .wrapper {
 	padding: 0 1em;
-
+	max-width: 35em;
+	margin: 0 auto;
 }
 
 h1 {
@@ -30,9 +40,10 @@ h1 {
 }
 
 p {
-	max-width: 31.25em;
+	// max-width: 31.25em;
 	letter-spacing: 1.3px;
 	font-size: 0.9em;
+
 }
 
 a {
@@ -42,3 +53,55 @@ a {
 	text-decoration: none;
 
 }
+
+// video stuff
+
+.video__container {
+	position: fixed;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	background-color: rgba(0,0, 255, 0.4);
+	display: flex;	
+	justify-content: center;
+}
+
+.video__wrapper {
+	position: relative;
+
+}
+
+.video {
+
+}
+
+.video--close {
+	position: absolute;
+  z-index: 20;
+  top: 0;
+  right: 0;
+  padding: 0.8em 1.3em;
+  margin: 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
