--- a/index.jade
+++ b/index.jade
@@ -8,7 +8,14 @@ html(lang="en")
 
     meta(name='description', content='')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    
+    //- jQuery
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
+    script.
+      if (typeof jQuery === 'undefined') {
+        console.log('none');
+        document.write(unescape('%3Cscript%20src%3D%22js/vendor/jquery-2.2.1.min.js%22%3E%3C/script%3E'));
+        console.log('loaded local jquery');
+      }    
     //- Typekit
     <script src="https://use.typekit.net/yyi4zol.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
@@ -16,20 +23,25 @@ html(lang="en")
     link(rel='stylesheet', href='css/main.css')
     //- script(src='js/vendor/modernizr-2.6.2.min.js')
 
-  body
-    .wrapper
+  body(data-theme="theme1")
+    .wrapper    
+
       h1 sandwiches
 
       .video__wrapper.video--hidden
         iframe(width="560", height="315", class="video" src="https://www.youtube.com/embed/3-Xsh01ICcU?rel=0&amp;controls=0&amp;showinfo=0", frameborder="0", allowfullscreen)
-        a.video--close(href='#') x
+        a.video--close(href='#', data-toggle='video') x
       
       p Godard four dollar toast gluten-free salvia, gastropub squid disrupt aesthetic keytar roof party food truck. Retro wayfarers kinfolk chia. +1 fashion axe wolf, listicle kickstarter freegan fixie XOXO sartorial ugh pour-over skateboard put a bird on it migas pop-up. Bitters scenester mustache, kitsch squid authentic viral knausgaard brooklyn helvetica meditation butcher. Ugh stumptown celiac small batch, williamsburg keffiyeh kogi lo-fi. Yuccie farm-to-table bitters schlitz, ennui typewriter before they sold out neutra trust fund banjo tofu. Put a bird on it flexitarian seitan, chicharrones literally neutra church-key knausgaard twee gluten-free.
       a.action--audio(href='https://www.youtube.com/watch?v=qtF5dMzAF2k') Do you want some sandwiches?
-      a.action--video(href='https://www.youtube.com/watch?v=3-Xsh01ICcU') Lemme see these sandwiches.
+      //- a.action--audio(href='#') Do you want some sandwiches?
+      a.action--video(href='#', data-toggle='video') Lemme see these sandwiches.
+      //- a.action--video(href='https://www.youtube.com/watch?v=3-Xsh01ICcU', data-toggle='video') Lemme see these sandwiches.
       a.action--mixtape(href='http://www.audiomack.com/album/the-hip-hop-head/lnjf-sandwiches') Gimme dem sandwiches!
 
-    //- .video__container
-    //-   .video__wrapper
-    //-     iframe(width="560", height="315", class="video" src="https://www.youtube.com/embed/3-Xsh01ICcU?rel=0&amp;controls=0&amp;showinfo=0", frameborder="0", allowfullscreen)
-    //-     a.video__close x
+  script(src="js/scripts.js")
+  script(src="js/vendor/soundmanager2.js")
+  script(src="js/sounds.js")
+
+    
+
