--- a/css/main.css
+++ b/css/main.css
@@ -527,3 +527,30 @@ body[data-blackout='true'], body.blackout {
 body[data-blackout='true'] h1, body[data-blackout='true'] a, body.blackout h1, body.blackout a {
   color: #000;
 }
+
+body[data-theme='usa'] {
+  background-color: white;
+  color: pink;
+}
+
+body[data-theme='usa'] h1, body[data-theme='usa'] a {
+  color: pink;
+}
+
+body[data-theme='rasta'] {
+  background-color: white;
+  color: pink;
+}
+
+body[data-theme='rasta'] h1, body[data-theme='rasta'] a {
+  color: pink;
+}
+
+body[data-theme='rainbox'] {
+  background-color: white;
+  color: pink;
+}
+
+body[data-theme='rainbox'] h1, body[data-theme='rainbox'] a {
+  color: pink;
+}
